--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
-<html> 
-   
+<!doctype html>
+
+<html lang="en">
+   <head>
+      <meta charset="utf-8">
+
+      <title>Portfolio Zorana</title>
+      <meta name="description" content="Portfolio Zorana">
+      <meta name="Zorana" content="">
+
+      <link rel="stylesheet" href="css/style.css">
+
+   </head>
+
+   <body>
+
+
+
+
+      <script src="js/scripts.js"></script>
+   </body>
 </html>
