--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-   <head>
-      <meta charset="utf-8">
 
-      <title>Portfolio Zorana</title>
-      <meta name="description" content="Portfolio Zorana">
-      <meta name="Zorana" content="">
+<head>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-      <link rel="stylesheet" href="css/style.css">
+   <title>Portfolio Zorana</title>
+   <meta name="description" content="Portfolio Zorana">
+   <meta name="Zorana" content="">
+   <link rel="stylesheet" href="css/style.css">
+</head>
 
-   </head>
+<body>
 
-   <body>
+   
 
+   <script src="js/scripts.js"></script>
+</body>
 
-
-
-      <script src="js/scripts.js"></script>
-   </body>
 </html>
