big commit, the page is up

--- a/index.html
+++ b/index.html
@@ -15,7 +15,80 @@
 
 <body>
 
-   
+   <!-- NAVIGATION -->
+   <nav>
+      <div>
+         <ul id="navigation-bar">
+            <li>
+               <a>Home</a>
+            </li>
+            <li>
+               <a>About me</a>
+            </li>
+            <li>
+               <a>Contact</a>
+            </li>
+            <li>
+               <a>Technologies</a>
+            </li>
+         </ul>
+      </div>
+   </nav>
+
+
+   <!-- HOME -->
+   <div class="home">
+      <div class="container">
+         <div class="white-bg-trnsp">
+            <h2 class="container-header">Home</h2>
+         </div>
+      </div>
+   </div>
+
+   <div class="horisontal-line"></div>
+
+   <!-- ABOUT ME -->
+   <div class="aboutme">
+      <div class="container">
+         <div class="white-bg-trnsp">
+            <h2 class="container-header">About me</h2> 
+            <img src="img/profile.jpg" alt="profile pic" style=" width:200px" />
+            <p class="text">Hi everyone. I am Zorana. I am very glad to be here with you to share the learning experience. My plan is to focus better on learning JS through this course. </p>
+         </div>
+      </div>
+   </div>
+
+   <div class="horisontal-line"></div>
+
+   <!-- CONTACT -->
+   <div class="contact">
+      <div class="container">
+         <div class="white-bg-trnsp">
+            <h2 class="container-header">contact</h2>
+         </div>
+      </div>
+   </div>
+
+   <div class="horisontal-line"></div>
+
+   <!-- TECHNOLOGY -->
+   <div class="technology">
+      <div class="container">
+         <div class="white-bg-trnsp">
+            <h2 class="container-header">Technology</h2>
+            <img src="img/1.jpg" alt="Keyboard" style="height:200px; width:200px">
+            <p class="text">I really like the animation creation. I think that is a sign I will be a good FE dev with a designers eye. Here are some of the technologies I have used here:</p>
+            <p>
+               SASS <br/>
+               I really loved VS Code extentions I've discovered like "Bracket Pair Colorizer", "Live Server", "Live Sass Compiler"...<br/>
+               Ubuntu. This one was a little bit of headache, but I have figured it out. Still getting used to it.<br/>
+               JS libraries<br/>
+               I've tried to avoid Bootstrap, Materialize and other libraries, so I could focus on creation JS myself<br/>
+               Two Google Fonts<br/>
+            </p>
+         </div>   
+      </div>
+   </div>
 
    <script src="js/scripts.js"></script>
 </body>
