--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
          <div class="container">
             <div class="white-bg-trnsp">
                <h2 class="container-header">contact</h2>
-               <form action="/action_page.php" id="single-form">
+               <form action="" class="single-form" id="formJs">
                   <label for="fname">First Name</label>
                   <input type="text" id="fname" name="firstname" placeholder="Your name..">
             
