--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
          <div class="container">
             <div class="white-bg-trnsp">
                <h2 class="container-header">contact</h2>
+               <p class="text">Have any questions? Send it via mail. </p>
                <form action="" class="single-form" id="formJs">
                   <label for="fname">First Name</label>
                   <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -116,7 +117,7 @@
    </div>
 
 
-   <script src="js/scripts.js"></script>
+   <script src="js/script.js"></script>
 
 </body>
 
