quote section II

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
                   SASS <br/>
                   As new to VS Code, I really loved extentions like "Bracket Pair Colorizer", "Live Server", "Live Sass Compiler"...<br/>
                   Ubuntu. This one was a little bit of headache. Still getting used to it.<br/>
-                  Libraries like formspree.io (form backend, API and email service for HTML forms), <br/>
+                  Libraries like formspree.io (form backend, API and email service for HTML forms) and GSAP for animation<br/>
+                  NPM is my package manager<br/>
                   I've tried to avoid Bootstrap, Materialize and other frameworks, so I could focus on JS.<br/>
                   Two Google Fonts<br/>
                   Find this website's code on my GitHub <a href="https://github.com/zoranaism/codaisseur" target="_blank">here</a>.
@@ -125,7 +126,7 @@
       </section>
 
    </div>
-
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
    <script src="js/jquery-3.4.1.js"></script>
    <script src="js/scripts.js"></script>
 
