--- a/index.html
+++ b/index.html
@@ -39,15 +39,13 @@
       <!-- HOME -->
       <section id="home">
          <div class="container">
-            <div class="home-bkgr">
-               <h1 id="home-hdr">while(!(succeed = try()));</h1>
-               <button id="cta">watch here</button>
-
-               <div class="panel"></div>
-               <img src="img/other/10.jpg" alt="random pick" style="height:200px; width:200px;" >
-               <p class="text">Talk is cheap. Show me the code.</p>
-               <div class="box"></div>
-            </div>
+            <div id="home-cont">
+               <!-- <img src="img/2.jpeg" alt="Create" id="home-pic" style="width: 100%;" /> -->
+               <div id="home-hdr">
+                  <h1 id="home-hdr-1">Hi, I am Zorana</h1>
+                  <h2 id="home-hdr-2">Welcome to my page</h2>
+               </div>
+            </div>        
          </div>
       </section>
 
