--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div id="home-cont">
                <!-- <img src="img/2.jpeg" alt="Create" id="home-pic" style="width: 100%;" /> -->
                <div id="home-hdr">
-                  <h1 id="home-hdr-1">Hi, I am Zorana</h1>
+                  <h1 id="home-hdr-1">Hello everyone</h1>
                   <h2 id="home-hdr-2">Welcome to my page</h2>
                </div>
             </div>        
@@ -57,10 +57,10 @@
             <div class="white-bg-trnsp">
                <h2 class="container-header">About me</h2> 
                <img src="img/profile-photo.jpg" alt="profile pic" style=" width:200px" />
-               <p class="text">Hi everyone, I am Zorana.</p>
-               <p class="text">This is my experimental Porfolio website. What do you think about it? Share your thoughts on a Slack chat.<br> 
-               My experience is diverse: Worked a bit as a FE Dev, had startup investment, taught Entrepreneurship course sponsored by HERE Technologies, created few NGO projects. I am basically a musician that ended up in Tech world.<br> 
-               My hobbies are yoga, attending good concerts, watching standup comedy, traveling and exploring new places, playing piano.<br>
+               <p class="text">Hi again. I am Zoraana.</p>
+               <p class="text">This is my experimental Porfolio website. What do you think about it? Thumb it up!<br> 
+               My experience is diverse: Worked a bit as a FE Dev, had startup investment, taught Entrepreneurship course sponsored by HERE Technologies, created few NGO projects. I am basically a musician (music teacher and pianist) that ended up in Tech world.<br> 
+               My hobbies are yoga, attending good concerts, watching standup comedy, traveling and exploring new places, playing piano...<br>
                My plan is to focus better on learning JS through this course, land a job and settle here in Den Bosch, Netherlands.</p>
             </div>
          </div>
@@ -73,7 +73,7 @@
          <div class="container">
             <div class="white-bg-trnsp">
                <h2 class="container-header">contact</h2>
-               <p class="text">Have any questions? Send it via mail. </p>
+               <p class="text">Wanna connect? Have any questions? Send it via mail.<br> This really works, so send me a mail or just test my validation form.</p>
                
                <form action="https://formspree.io/xwkobrbr" method="POST" class="single-form" id="formJs">
 
@@ -108,22 +108,21 @@
                <div id="tech-content">
                   
                   <div class="content-left">                  
-                     <p class="text">I am Front End Developer because I like animations. </p>
+                     <p class="text">I am Front End Developer because I like animations. I would actually like to master web animations someday. Mixed media is also very attractive too.</p>
                      <p class="text">Here are some of the technologies I've discovered or just used here:</p>
                      <p class="text">
                         SASS <br/>
                         As new to VS Code, I really loved extentions like "Bracket Pair Colorizer", "Live Server", "Live Sass Compiler"...<br/>
                         Ubuntu. This one was a little bit of headache. Still getting used to it.<br/>
-                        Libraries like formspree.io (form backend, API and email service for HTML forms) and GSAP for animation<br/>
+                        formspree.io is form backend, API and email service for HTML forms<br/>
                         NPM is my package manager<br/>
                         I've tried to avoid Bootstrap, Materialize and other frameworks, so I could focus on JS.<br/>
-                        Two Google Fonts<br/>
                         Find this website's code on my GitHub <a href="https://github.com/zoranaism/codaisseur" target="_blank">here</a>.
                      </p>
                   </div>
                   <div class="content-right">
                      <div id="quote-holder">
-                        <h3 id="quote-header">Quotes by famous people</h3>
+                        <h3 id="quote-header">Silly coding quotes</h3>
                         <button type="button" id="quoteBtn">Press to display a quote</button>
                         <blockquote>
                            <p class="text" id="quote"></p>
@@ -141,8 +140,6 @@
    </div>
 
    
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.1.1/gsap.min.js"></script>
-   <script src="js/gsap.min.js"></script>
    <script src="js/jquery-3.4.1.js"></script>
    <script src="js/scripts.js"></script>
 
